@@ -643,6 +643,9 @@ Some default configuration options have changed:
 * Update to Venetian translation (vec)
 * Update to Slovenian translation (sl)
 * Add standard user tool links to deleted revision list
+* Separate out EditPage's getContent bits from regular Article getContent.
+  Cleans up read-only-mode warning on empty pages and neats up some code.
+
 
 == Compatibility ==
 
